Fixing scrollbar issue in mobile view. Adding buildable font file

--- a/ui/styles/common.scss
+++ b/ui/styles/common.scss
@@ -6,6 +6,22 @@ $darkred-color: #964040;
 $white-color: #ffffff;
 $placeholder-color:  rgba(181, 199, 231, 0.396);
 
+@font-face {
+    font-family: 'Luckiest Guy';
+    src: url('./LuckiestGuy-Regular.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+html, body {
+  overflow: hidden;
+}
+
+body {
+    font-family: 'Luckiest Guy';
+    position: relative;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
 }
