--- a/ui/styles/mobile.scss
+++ b/ui/styles/mobile.scss
@@ -18,6 +18,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 20px;
 
     .score-card {
         width: 100vw;
